--- a/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 
 = Configuring authentication in the {PlatformNameShort}
 
-Using the authentication settings in {PlatformNameShort}, you can set up a simplified login through several authentication methods, such as LDAP and SAML
+Using the authentication settings in {PlatformNameShort}, you can set up a simplified login through several authentication methods, such as LDAP and SAML.
 Depending on the authentication method you select, you will be required to enter different information to complete the configuration. Be sure to include all the information required for your configuration needs.
 
 == Prerequisites
@@ -18,17 +18,18 @@ Depending on the authentication method you select, you will be required to enter
 
 include::platform/con-gw-pluggable-authentication.adoc[leveloffset=+1]
 
-include::platform/con-gw-create-authentication.adoc[leveloffset=+2]
+include::platform/con-gw-create-authentication.adoc[leveloffset=+1]
 
-include::platform/proc-gw-select-auth-type.adoc[leveloffset=+3]
+include::platform/proc-gw-select-auth-type.adoc[leveloffset=+2]
 
-include::platform/proc-gw-configure-auth-details.adoc[leveloffset=+3]
+include::platform/proc-gw-configure-auth-details.adoc[leveloffset=+2]
 
-include::platform/proc-gw-define-rules-triggers.adoc[leveloffset=+3]
+include::platform/proc-gw-define-rules-triggers.adoc[leveloffset=+2]
 
-include::platform/proc-gw-adjust-mapping-order.adoc[leveloffset=+3]
+include::platform/proc-gw-adjust-mapping-order.adoc[leveloffset=+2]
 
-include::platform/proc-gw-review-auth-settings.adoc[leveloffset=+3]
+include::platform/proc-gw-review-auth-settings.adoc[leveloffset=+2]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
+ 
