--- a/downstream/assemblies/hub/assembly-working-with-namespaces.adoc
+++ b/downstream/assemblies/hub/assembly-working-with-namespaces.adoc
@@ -7,15 +7,14 @@ Namespaces are unique locations in {HubName} to which you can upload and publish
 You can use namespaces in {HubName} to organize collections developed within your organization for internal distribution and use.
 
 If you are working with namespaces, you must have a team that has permissions to create, edit and upload collections to namespaces. Collections uploaded to a namespace require administrative approval before you can publish them and make them available for use.
-For instructions on how to create a team to manage access to your collections, see link:{URLCentralAuth}/index#assembly-controller-teams_gw-manage-rbac[Teams] in the {TitleCentralAuth} guide.
-// Create content developers procedure will need to be replaced with new access management procedure. -Hala 
-// include::hub/proc-create-content-developers.adoc[leveloffset=+1]
+
+include::hub/proc-create-content-developers.adoc[leveloffset=+1]
 
 include::hub/proc-create-namespace.adoc[leveloffset=+1]
 
 include::hub/proc-edit-namespace.adoc[leveloffset=+1]
 
-When you create a namespace, groups with permissions to upload to it can start adding their collections for approval. Collections in the namespace appear in the *Published* repository after approval.
+When you create a namespace, teams with permissions to upload to it can start adding their collections for approval. Collections in the namespace appear in the *Published* repository after approval.
 
 include::hub/proc-uploading-collections.adoc[leveloffset=+1]
 
