aap-20548: UI parity update for managing content in hub (#1609)
* aap-20548: UI parity update for hub

* editorial updates

* UI parity/editorial updates

* UI updates for managing content in AH ch. 1

* attributes and UI updates

* further attribute and UI updates

* attribute and UI updates

* minor updates

* UI updates

* commented out most of the info on certified and validated collections

* adds new procedure plus edits

* UI updates

* fixed formatting in assembly

* peer review feedback

* further changes based on peer review feedback

--- a/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
@@ -6,9 +6,9 @@ ifdef::context[:parent-context: {context}]
 :context: managing-collections-hub
 
 [role="_abstract"]
-As a content creator, you can use namespaces in {HubName} to curate and manage collections for the following purposes:
+As a content creator, you can use namespaces in {HubName} to curate and manage collections. For example, you can:
 
-* Create groups with permissions to curate namespaces and upload collections to {PrivateHubName}
+* Create teams with permissions to curate namespaces and upload collections to {PrivateHubName}
 * Add information and resources to the namespace to help end users of the collection in their automation tasks
 * Upload collections to the namespace
 * Review the namespace import logs to determine the success or failure of uploading the collection and its current approval status
