--- a/downstream/modules/hub/proc-configure-ansible-galaxy-cli-verify.adoc
+++ b/downstream/modules/hub/proc-configure-ansible-galaxy-cli-verify.adoc
@@ -24,7 +24,7 @@ gpg --import --no-default-keyring --keyring ~/.ansible/pubring.kbx my-public-key
 +
 [NOTE]
 ====
-In addition to any signatures provided by the {HubName}, signature sources can also be provided in the requirements file and on the command line. 
+In addition to any signatures provided by {HubName}, signature sources can also be provided in the requirements file and on the command line. 
 Signature sources should be URIs.
 ====
 +
@@ -61,8 +61,8 @@ Create a collection with `company_name.product` format.
 This format means that multiple products can have different collections under the company namespace.
 
 [discrete]
-= How do I get a namespace on {HubNameMain}?
+= How do I get a namespace on {HubName}?
 
-By default namespaces used on {Galaxy} are also used on {HubNameMain} by the Ansible partner team. 
+By default namespaces used on {Galaxy} are also used on {HubName} by the Ansible partner team. 
 For any queries and clarifications contact ansiblepartners@redhat.com.
 
