--- a/downstream/modules/hub/proc-create-content-developers.adoc
+++ b/downstream/modules/hub/proc-create-content-developers.adoc
@@ -1,26 +1,34 @@
 [id="proc-create-content-developers"]
 
-= Creating a new group for content curators
+= Creating a new team for content curators
 
-You can create a new group in {PrivateHubName} designed to support content curation in your organization. This group can contribute internally developed collections for publication in {PrivateHubName}.
+You can create a new team in {PlatformNameShort} designed to support content curation in your organization. This team can contribute internally-developed collections for publication in {PrivateHubName}.
 
-To help content developers create a namespace and upload their internally developed collections to {PrivateHubName}, you must first create and edit a group and assign the required permissions.
+To help content developers create a namespace and upload their internally developed collections to {PrivateHubName}, you must first create and edit a team and assign the required permissions.
 
 .Prerequisites
 
-* You have administrative permissions in {PrivateHubName} and can create groups.
+* You have administrative permissions in {PlatformNameShort} and can create teams.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
-. From the navigation panel, select {MenuHubGroups} and click btn:[Create].
-. Enter *Content Engineering* as a *Name* for the group in the modal and click btn:[Create]. You have created the new group and the *Groups* page opens.
-. On the *Permissions* tab, click btn:[Edit].
-. Under *Namespaces*, add permissions for *Add Namespace*, *Upload to Namespace*, and *Change Namespace*.
-. Click btn:[Save].
+
+. Log in to your {PlatformNameShort}.
+. From the navigation panel, select {MenuAMTeams} and click btn:[Create team].
+. Enter *Content Engineering* as a *Name* for the team.
+. Select an *Organization* for the team. 
+. Click btn:[Create team]. You have created the new team and the team Details page opens.
+. Select the *Roles* tab and then select the *Automation Content* tab.
+. Click btn:[Add roles].
+. Select *Namespace* from the *Resource type* list and click btn:[Next].
+. Select the namespaces that will receive the new roles and click btn:[Next].
+. Select the roles to apply to the selected namespaces and click btn:[Next].
+. Review your selections and click btn:[Finish].
+. Click btn:[Close] to complete the process.
 +
-The new group is created with the permissions that you assigned. You can then add users to the group.
+The new team is created with the permissions that you assigned. You can then add users to the team.
 +
-. Click the *Users* tab on the *Groups* page.
-. Click btn:[Add].
-. Select users and click btn:[Add].
+. Click the *Users* tab on the *Teams* page.
+. Click btn:[Add users].
+. Select users and click btn:[Add users].
+
+For further instructions on managing access with teams, see link:{URLCentralAuth}/index#assembly-controller-teams_gw-manage-rbac[Teams] in the {TitleCentralAuth} guide.
