--- a/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
+++ b/downstream/assemblies/hub/assembly-managing-cert-valid-content.adoc
@@ -6,56 +6,70 @@ ifdef::context[:parent-context: {context}]
 :context: managing-cert-validated-content
 
 [role="_abstract"]
-{CertifiedName} are included in your subscription to {PlatformName}. Red Hat Ansible content includes two types of content: {CertifiedName} and {Valid}.
-Using {HubNameMain}, you can access and curate a unique set of collections from all forms of Ansible content.
+{CertifiedName} are included in your subscription to {PlatformName}. Using {HubNameMain}, you can access and curate a unique set of collections from all forms of Ansible content.
 
 Red Hat Ansible content contains two types of content:
 
 * {CertifiedName}
 * {Valid} collections
 
-Ansible validated collections are available in your {PrivateHubName} through the Platform Installer.
-When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
+You can use both {CertifiedName} or {Valid} collections to build your automation library. For more information on the differences between {CertifiedName} and {Valid} collections, see the Knowledgebase article link:https://access.redhat.com/support/articles/ansible-automation-platform-certified-content[{CertifiedName} and {Valid}], or xref:assembly-validated-content[{Valid}] in this guide.
 
-If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
-For further information, see xref:assembly-validated-content[{Valid}].
+// hherbly--removed, see aap-20548  
+// Ansible validated collections are available in your {PrivateHubName} through the platform installer.
+// When you download {PlatformName} with the bundled installer, validated content is pre-populated into the {PrivateHubName} by default, but only if you enable the {PrivateHubName} as part of the inventory.
+
+// If you are not using the bundle installer, you can use a Red Hat supplied Ansible playbook to install validated content.
+
+// For further information, see xref:assembly-validated-content[{Valid}].
 
 You can update these collections manually by downloading their packages.
 
-[discrete]
-== Why certify Ansible collections?
-
-The Ansible certification program enables a shared statement of support for {CertifiedCon} between Red Hat and the ecosystem partner.
-An end customer, experiencing trouble with Ansible and certified partner content, can open a support ticket, for example, a request for information, or a problem with Red Hat, and expect the ticket to be resolved by Red Hat and the ecosystem partner.
-
-Red Hat offers go-to-market benefits for Certified Partners to grow market awareness, generate demand, and sell collaboratively.
-
-Red Hat {CertifiedName} are distributed through {HubNameMain} (subscription required), a centralized repository for jointly supported Ansible Content.
-As a certified partner, publishing collections to {HubNameMain} provides end customers the power to manage how trusted automation content is used in their production environment with a well-known support life cycle.
-
-For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Connect].
+//hherbly: removing as this is specific to partners, not a general user audience. see aap-20548  
 
 [discrete]
-== How do I get a collection certified?
 
-For instructions on certifying your collection, see the Ansible certification policy guide on link:http://www.ansible.com/partners[Red Hat Partner Connect].
+// == Why certify Ansible collections?
 
-[discrete]
-== How does the joint support agreement on Certified Collections work?
+// The Ansible certification program represents a shared statement of support for {CertifiedCon} between Red Hat and the ecosystem partner.
+// An end customer experiencing trouble with Ansible and certified partner content can, for example, open a support ticket describing a request for information, or a problem with Red Hat, and expect the ticket to be resolved by Red Hat and the ecosystem partner.
 
-If a customer raises an issue with the Red Hat support team about a certified collection, Red Hat support assesses the issue and checks whether the problem exists within Ansible or Ansible usage.
-They also check whether the issue is with a certified collection.
-If there is a problem with the certified collection, support teams transfer the issue to the vendor owner of the certified collection through an agreed upon tool such as TSANet.
+// Red Hat offers go-to-market benefits for Certified Partners to grow market awareness, generate demand, and sell collaboratively.
 
-[discrete]
-== Can I create and certify a collection containing only Ansible Roles?
+// Red Hat {CertifiedName} are distributed through {HubNameMain} (subscription required), a centralized repository for jointly supported Ansible Content.
+// As a certified partner, publishing collections to {HubNameMain} gives end customers the power to manage how trusted automation content is used in their production environment with a well-known support life cycle.
 
-You can create and certify collections that contain only roles.
-Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections only containing roles.
-Contact ansiblepartners@redhat.com for more information.
+// For more information about getting started with certifying a solution, see link:https://connect.redhat.com/en/partner-with-us/red-hat-ansible-automation-certification[Red Hat Partner Resources].
 
-include::assembly-synclists.adoc[leveloffset=+1]
+// [discrete]
+// == How do I get a collection certified?
+
+// For instructions on certifying your collection, see the Ansible certification policy guide on link:http://www.ansible.com/partners[Red Hat Partner Connect].
+
+// [discrete]
+// == How does the joint support agreement on Certified Collections work?
+
+// If a customer raises an issue with the Red Hat support team about a certified collection, Red Hat support assesses the issue and checks whether the problem is with Ansible or Ansible usage.
+// They also check whether the issue is with a certified collection.
+// If there is a problem with the certified collection, support teams transfer the issue to the vendor owner of the certified collection through an agreed-upon tool such as TSANet.
+
+// [discrete]
+// == Can I create and certify a collection containing only Ansible Roles?
+
+// You can create and certify collections that contain only roles.
+// Current testing requirements are focused on collections containing modules, and additional resources are currently in progress for testing collections containing only roles.
+// Contact ansiblepartners@redhat.com for more information.
+
+You can use {HubNameMain} to distribute the relevant {CertifiedColl}s to your users by creating a requirements file or a synclist. Use a requirements file to install collections to your {HubName}, as synclists can only be managed by users with platform administrator privileges. 
+
+Before you can use a requirements file to install content, you must: 
+
+. xref:proc-obtaining-org-collection-url[Obtain an automation hub API token]
+. xref:proc-set-rhcertified-remote.adoc[Use the API token to configure a remote repository in your local hub]
+. Then, xref:proc-create-requirements-file[Create a requirements file].
+
 include::assembly-syncing-to-cloud-repo.adoc[leveloffset=+1]
+include::assembly-synclists.adoc[leveloffset=+1]
 include::assembly-collections-and-content-signing-in-pah.adoc[leveloffset=+1]
 //include::assembly-faq.adoc[leveloffset=+1]
 include::assembly-validated-content.adoc[leveloffset=+1]
