--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -5,22 +5,20 @@ Use remote configurations to configure your {PrivateHubName} to synchronize with
 
 [IMPORTANT]
 ====
+To synchronize content, you can now upload a manually-created requirements file from the rh-certified remote. Remotes are configurations that allow you to synchronize content to your custom repositories from an external collection source.
+
 As of the 2.4 release you can still synchronize content, but synclists are deprecated, and will be removed in a future version.
-
-To synchronize content, you can now upload a manually-created requirements file from the rh-certified remote. 
-
-Remotes are configurations that allow you to synchronize content to your custom repositories from an external collection source.
 ====
 
 [discrete]
 == What’s the difference between {Galaxy} and {HubNameMain}?
 
 Collections published to {Galaxy} are the latest content published by the Ansible community and have no joint support claims associated with them. 
-{Galaxy} is the recommended frontend directory for the Ansible community accessing content.
+{Galaxy} is the recommended frontend directory for the Ansible community to access content.
 
-Collections published to {HubNameMain} are targeted for joint customers of Red Hat and selected partners. 
+Collections published to {HubNameMain} are targeted to joint customers of Red Hat and selected partners. 
 Customers need an Ansible subscription to access and download collections on {HubNameMain}. 
-A certified collection means that Red Hat and partners have a strategic relationship in place and are ready to support joint customers, and may have had additional testing and validation done against them.
+A certified collection means that Red Hat and partners have a strategic relationship in place and are ready to support joint customers, and that the collections may have had additional testing and validation done against them.
 
 [discrete]
 == How do I request a namespace on {Galaxy}?
@@ -37,11 +35,13 @@ After users are added as administrators of the namespace, you can use the self-s
 [discrete]
 == Are there any restrictions for {Galaxy} namespace naming?
 
-Collection namespaces must follow python module name convention. 
+Collection namespaces must follow Python module name convention. 
 This means collections should have short, all lowercase names. 
 You can use underscores in the collection name if it improves readability.
 
 include::hub/con-remote-repos.adoc[leveloffset=+1]
+
+include::hub/proc-create-requirements-file.adoc[leveloffset=+1]
 
 include::hub/proc-obtaining-org-collection-url.adoc[leveloffset=+1]
 
