--- a/downstream/modules/hub/proc-create-synclist.adoc
+++ b/downstream/modules/hub/proc-create-synclist.adoc
@@ -13,7 +13,7 @@ All {CertifiedName} are included by default in your initial organization synclis
 .Prerequisites
 
 * You have a valid {PlatformNameShort} subscription.
-* You have Organization Administrator permissions for {Console}.
+* You have organization administrator permissions for {Console}.
 * The following domain names are part of either the firewall or the proxy's allowlist.
 They are required for successful connection and download of collections from {HubName} or Galaxy server:
 ** `galaxy.ansible.com`
@@ -27,10 +27,16 @@ The following domain names must be in the allow list:
 * SSL inspection is disabled either when using self signed certificates or for the Red Hat domains.
 
 .Procedure
-// ddacosta I don't know if a change will be needed here for Gateway as this is referring to the Console version of Hub. Will console pull in nav changes? Also, there is no repositories selection on the console version right now. 
+
 . Log in to `{Console}`.
 . Navigate to menu:Automation Hub[Collections].
-. Set the toggle switch on each collection to exclude or include it on your synclist.
-. To initiate the remote repository synchronization, navigate to {HubName} and select {MenuACAdminRepositories}.
-. Click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Sync* to initiate the remote repository synchronization to your {PrivateHubName}.
+. Set the *Sync* toggle switch on each collection to exclude or include it on your synclist.
++
+[NOTE]
+====
+You will only see the *Sync* toggle switch if you have administrator permissions.
+====
++
+. To initiate the remote repository synchronization, navigate to your {PlatformNameShort} and select {MenuACAdminRepositories}.
+. In the row containing the repository you want to sync, click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Sync repository* to initiate the remote repository synchronization to your {PrivateHubName}. 
 . Optional: If your remote repository is already configured, update the collections content that you made available to local users by manually synchronizing Red Hat {CertifiedName} to your {PrivateHubName}.
