--- a/downstream/modules/hub/proc-uploading-collections.adoc
+++ b/downstream/modules/hub/proc-uploading-collections.adoc
@@ -16,8 +16,9 @@ Format your collection file name as follows: <my_namespace-my_collection-1.0.0.t
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces} and select a namespace.
+. Select the *Collections* tab.
 . Click btn:[Upload collection].
 . Click btn:[Select file] from the *New collection* dialog.
 . Select the collection to upload.
