updates to modules in assembly-collections-and-content-signing-in-pah

--- a/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
+++ b/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
@@ -13,12 +13,12 @@ You can use content signing on {PrivateHubName} in the following scenarios:
 * You want to rotate signatures on your collections.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminCollectionApproval}.
 The Approval dashboard opens and displays a list of collections.
 
-. Click btn:[Approve] for each collection that you want to sign.
+. Click the thumbs up icon next to the collection you want to approve. On the modal that appears, check the box confirming that you want to approve the collection, and click btn:[Approve and sign collections].
 
 .Verification
-* Verify that the collections you signed and manually approved are displayed in the *Collections* tab.
+* Navigate to {MenuACCollections} to verify that the collections you signed and approved are displayed. 
