--- a/downstream/assemblies/hub/assembly-validated-content.adoc
+++ b/downstream/assemblies/hub/assembly-validated-content.adoc
@@ -7,58 +7,63 @@
 
 == Configuring validated collections with the installer
 
-When you download and run the bundle installer, certified and validated collections are automatically uploaded.
+When you download and run the RPM bundle installer, certified and validated collections are automatically uploaded.
 Certified collections are uploaded into the `rh-certified` repository.
 Validated collections are uploaded into the `validated` repository.
 
-You can change to default configuration by using two variables:
+You can change the default configuration by using two variables:
 
 * `automationhub_seed_collections` is a boolean that defines whether or not preloading is enabled.
 * `automationhub_collection_seed_repository`is a variable that enables you to specify the type of content to upload when it is set to `true`.
 Possible values are `certified` or `validated`.
 If this variable is missing, both content sets will be uploaded.
 
-== Installing validated content using the tarball
-
-If you are not using the bundle installer, you can use a standalone .tar file, `ansible-validated-content-bundle-1.tar.gz`.
-You can also use this standalone .tar file later to update validated contents in any environment, when a newer .tar file becomes available, without having to re-run the bundle installer.
-
-.Prerequisites
-Use the following required variables to run the playbook.
-
-[cols="50%,50%",options="header"]
-|====
-| Name | Description
-| *`automationhub_admin_password`* | Your administration password.
-| *`automationhub_api_token`* | The API token generated for your {HubName}.
-| *`automationhub_main_url`* | For example, `\https://automationhub.example.com`
-| *`automationhub_require_content_approval`* | Boolean (`true` or `false`)
-
-This must match the value used during {HubName} deployment.
-
-This variable is set to `true` by the installer.
-|====
-
-.Procedure
-. To obtain the .tar file, navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page and select *Ansible Validated Content*.
-. Upload the content and define the variables (this example uses `automationhub_api_token`):
-+
-[options="nowrap" subs="+quotes,attributes"]
-----
-ansible-playbook collection_seed.yml
--e automationhub_api_token=<api_token>
--e automationhub_main_url=https://automationhub.example.com
--e automationhub_require_content_approval=true
-----
-+
 [NOTE]
 ====
-Use either `automationhub_admin_password` or `automationhub_api_token`, not both.
+Changing the default configuration may require further platform configuration changes for other content you may use. 
 ====
 
-When complete, the collections are visible in the validated collection section of {PrivateHubName}.
-Users can now view and download collections from your {PrivateHubName}.
+// == Installing validated content using the tarball
 
-[role="_additional-resources"]
-.Additional Resources
-For more information on running ansible playbooks, see link:https://docs.ansible.com/ansible/latest/cli/ansible-playbook.html[ansible-playbook].
+// If you are not using the bundle installer, you can use a standalone .tar file, `ansible-validated-content-bundle-1.tar.gz`.
+// You can also use this standalone .tar file later to update validated contents in any environment, when a newer .tar file becomes available, without having to re-run the bundle installer.
+
+// .Prerequisites
+// Use the following required variables to run the playbook.
+
+// [cols="50%,50%",options="header"]
+// |====
+// | Name | Description
+// | *`automationhub_admin_password`* | Your administration password.
+// | *`automationhub_api_token`* | The API token generated for your {HubName}.
+// | *`automationhub_main_url`* | For example, `\https://automationhub.example.com`
+// | *`automationhub_require_content_approval`* | Boolean (`true` or `false`)
+//
+// This must match the value used during {HubName} deployment.
+//
+// This variable is set to `true` by the installer.
+// |====
+
+// .Procedure
+// . To obtain the .tar file, navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page and select // *Ansible Validated Content*.
+// . Upload the content and define the variables (this example uses `automationhub_api_token`):
+// +
+// [options="nowrap" subs="+quotes,attributes"]
+// ----
+// ansible-playbook collection_seed.yml
+// -e automationhub_api_token=<api_token>
+// -e automationhub_main_url=https://automationhub.example.com
+// -e automationhub_require_content_approval=true
+// ----
+// +
+// [NOTE]
+// ====
+// Use either `automationhub_admin_password` or `automationhub_api_token`, not both.
+// ====
+
+// When complete, the collections are visible in the validated collection section of {PrivateHubName}.
+// Users can now view and download collections from your {PrivateHubName}.
+
+// [role="_additional-resources"]
+// .Additional Resources
+// For more information on running ansible playbooks, see link:https://docs.ansible.com/ansible/latest/cli/ansible-playbook.html[ansible-playbook].
