AAP-20548: Managing automation content doc updates (#2117)
* update sync procedure

* updates to syncing to cloud repo assembly

* UI update

* updates to modules in assembly-collections-and-content-signing-in-pah

* updates to validated content assembly

--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -11,7 +11,7 @@ As of the 2.4 release you can still synchronize content, but synclists are depre
 ====
 
 [discrete]
-== What’s the difference between {Galaxy} and {HubNameMain}?
+== What's the difference between {Galaxy} and {HubNameMain}?
 
 Collections published to {Galaxy} are the latest content published by the Ansible community and have no joint support claims associated with them. 
 {Galaxy} is the recommended frontend directory for the Ansible community to access content.
@@ -41,8 +41,6 @@ You can use underscores in the collection name if it improves readability.
 
 include::hub/con-remote-repos.adoc[leveloffset=+1]
 
-include::hub/proc-create-requirements-file.adoc[leveloffset=+1]
-
 include::hub/proc-obtaining-org-collection-url.adoc[leveloffset=+1]
 
 include::hub/proc-set-rhcertified-remote.adoc[leveloffset=+1]
@@ -50,3 +48,5 @@ include::hub/proc-set-rhcertified-remote.adoc[leveloffset=+1]
 include::hub/proc-set-community-remote.adoc[leveloffset=+1]
 
 include::hub/proc-configure-proxy-remote.adoc[leveloffset=+1]
+
+include::hub/proc-create-requirements-file.adoc[leveloffset=+1]
